<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchFormFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/keyword"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/keywordErr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/mandatory"
                    android:textColor="#ff0000"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <EditText
                    android:id="@+id/keyword"
                    android:layout_width="390dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/keyword_hint"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/category"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <Spinner
                    android:id="@+id/category"
                    android:layout_width="390dp"
                    android:layout_height="wrap_content"
                    android:entries="@array/category"
                    android:prompt="@string/category_default" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/distance"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <EditText
                    android:id="@+id/distance"
                    android:layout_width="390dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/distance_hint"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:text="From"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/here"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/currentLoc" />

                    <RadioButton
                        android:id="@+id/other"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/otherLoc" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="40dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/locErr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mandatory"
                    android:textColor="#ff0000"
                    android:textSize="15sp" />
                <!--<EditText-->
                <!--android:id="@+id/inputLoc"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:inputType="text"-->
                <!--android:hint="@string/other_hint"/>-->
                <AutoCompleteTextView
                    android:id="@+id/inputLoc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/other_hint"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/place_choice"></AutoCompleteTextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/search_btn"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:text="Search" />

                <Button
                    android:id="@+id/clear_btn"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:text="Clear" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</FrameLayout>