<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/details"
    android:fitsSystemWindows="true"
    tools:context=".DetailsActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <android.support.v7.widget.Toolbar
            android:id="@+id/detailTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textStyle="bold"
            app:navigationIcon="?android:attr/homeAsUpIndicator"
            app:popupTheme="@style/AppTheme.PopupOverlay" >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:layout_gravity="right"
                android:linksClickable="true"
                android:id="@+id/favo_btn" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:layout_gravity="right"
                android:autoLink="web"
                android:linksClickable="true"
                android:src="@drawable/share"
                android:id="@+id/share_btn" />

        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            android:id="@+id/details_tabs"
            style="@style/MyCustomTabLayout"
            app:tabMode="scrollable"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TabItem
                android:id="@+id/info_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_tab" />

            <android.support.design.widget.TabItem
                android:id="@+id/photos_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/photos_tab" />

            <android.support.design.widget.TabItem
                android:id="@+id/map_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map_tab" />

            <android.support.design.widget.TabItem
                android:id="@+id/reviews_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reviews_tab" />

        </android.support.design.widget.TabLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/details_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <TextView
        android:id="@+id/details_err"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="105dp"
        android:gravity="center"
        android:text="@string/results_err"
        android:visibility="gone"/>
</android.support.design.widget.CoordinatorLayout>