<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReviewsFragment">

    <TextView
        android:id="@+id/reviews_err"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/reviews_err"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp">

            <Spinner
                android:id="@+id/reviews_choice"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/type_choice"
                android:prompt="@string/reviews_default"/>

            <Spinner
                android:id="@+id/sort_choice"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="2"
                android:entries="@array/sort_choice"
                android:prompt="@string/sort_default"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <!-- This recycler view shows Results data -->
            <android.support.v7.widget.RecyclerView
                android:id="@+id/reviews_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>