<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoFragment"
    android:id="@+id/info_fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add_title"
            android:orientation="horizontal"
            android:padding="15dp"
            android:visibility="gone" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:text="@string/add"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/info_add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phone_title"
            android:orientation="horizontal"
            android:padding="15dp"
            android:visibility="gone" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:text="@string/phone"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/info_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:autoLink="phone"
                android:linksClickable="true"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/price_title"
            android:orientation="horizontal"
            android:padding="15dp"
            android:visibility="gone" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:text="@string/price"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/info_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rating_title"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="0dp"
            android:visibility="gone">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:text="@string/rate"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RatingBar
                android:id="@+id/info_rate"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:scaleX=".5"
                android:scaleY=".5"
                android:transformPivotX="-40dp"
                android:transformPivotY="0dp"
                android:isIndicator="true"
                android:max="5" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/google_title"
            android:orientation="horizontal"
            android:padding="15dp"
            android:visibility="gone">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="left"
                android:text="@string/ggPage"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/info_google"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:autoLink="web"
                android:linksClickable="true"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/web_title"
            android:orientation="horizontal"
            android:padding="15dp"
            android:visibility="gone">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="left"
                android:text="@string/web"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/info_webpage"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:autoLink="web"
                android:linksClickable="true"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/info_err"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/info_err"
        android:visibility="gone" />

</FrameLayout>